# arraylib

./: .gitignore  Dockerfile  LibraryExperiment.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: release.yml  test.yml
_sources/: LibraryExperiment.rst.txt  index.rst.txt
_sources/notebooks/: run_simulations.ipynb.txt  run_test_data_cmdline.ipynb.txt  run_test_data_interactive.ipynb.txt
arraylib/: __init__.py  alignment.py  config.py  deconvolution.py  generate_count_matrix.py  io.py  libraryexperiment.py  main.py  predict_locations.py  simulations.py  trimming.py
docs/: LibraryExperiment.rst  conf.py  index.rst  references.bib  requirements.txt
docs/notebooks/: installation.ipynb  run_simulations.ipynb  run_test_data.ipynb  run_test_data_cmdline.ipynb  run_test_data_interactive.ipynb
docs/notebooks/.ipynb_checkpoints/: run_test_data-checkpoint.ipynb
docs/notebooks/bowtie_ref/: UTI89.3.bt2  UTI89.4.bt2
docs/notebooks/input/: 1.fastq  10.fastq  11.fastq  2.fastq  3.fastq  4.fastq  5.fastq  9.fastq
notebooks/: installation.html  installation.ipynb  run_simulations.html  run_test_data.html  run_test_data.ipynb  run_test_data_cmdline.html  run_test_data_cmdline.ipynb  run_test_data_interactive.html
pysudoku_package/: deconvolution.py  io.py  libraryexperiment.py  main.py  trimming.py
tests/: conftest.py  test_alignment.py  test_config.py  test_deconvolution.py  test_generate_count_matrix.py  test_run.py  test_simulations.py  test_trimming.py
tests/test_data/: alignment_result_expected.csv  exp_design.csv  expected_filtered_count_matrix.csv  expected_well_location_summary.csv  expected_well_location_summary_old.csv  full_exp_design.csv  test.fastq  test_alignment.sam  tnseeker_test_output.csv  trimmed_expected.fastq
tests/test_data/bowtie_ref/: UTI89.2.bt2  UTI89.rev.2.bt2
tests/test_data/input/: 12.fastq  6.fastq  7.fastq  8.fastq
