[tool.poetry]
name = "arraylib-solve"
version = "0.30.0"
description = "Tool to computationally deconvolve combinatorially pooled arrayed random mutagenesis libraries"
authors = ["capraz <tuemayc@hotmail.com>"]
readme = "README.md"
packages = [{include = "arraylib"}]
license = "MIT"

[tool.pytest.ini_options]
markers =["integtest"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
pandas = ">=1.4.2"
numpy = ">=1.22.4"
click = ">=8.1.3"
scikit-learn = ">=1.1.1"
numba = ">=0.55.2"
scipy = ">=1.8.1"
biopython = ">=1.79"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
sphinxcontrib-bibtex = "^2.5.0"
nbsphinx = { version = "0.8.9", optional = true }
jupyter = {version = "*", optional = true}
pytest = "*"

[tool.poetry.scripts]
arraylib-run = "arraylib.main:run"
arraylib-run_on_barcodes = "arraylib.main:run_on_barcodes"
arraylib-deconvolve = "arraylib.main:deconvolve"
arraylib-deconvolve_validation = "arraylib.main:deconvolve_validation"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "nbsphinx"]
notebook = ["jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
