[tool.poetry]
name = "arraylib-solve"
version = "1.0.0"
description = "Tool to computationally deconvolve combinatorially pooled arrayed random mutagenesis libraries"
authors = ["capraz <tuemayc@hotmail.com>"]
readme = "README.md"
packages = [{include = "arraylib"}]
license = "MIT"

[tool.pytest.ini_options]
markers =["integtest"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=1.4.2"
numpy = "==1.26.4"
click = ">=8.1.3"
scikit-learn = ">=1.1.1"
numba = ">=0.59.0"
scipy = ">=1.12.0"
biopython = ">=1.79"
matplotlib =">=3.9,<3.11"
seaborn = ">=0.11.2"
fast2q = ">=2.7.6"
tnseeker = ">=1.1.0.6"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
sphinxcontrib-bibtex = "^2.5.0"
nbsphinx = { version = "0.8.9", optional = true }
jupyter = {version = "*", optional = true}
pytest = "*"

[tool.poetry.scripts]
arraylib-run = "arraylib.main:run"
arraylib-run_on_barcodes = "arraylib.main:run_on_barcodes"
arraylib-deconvolve = "arraylib.main:deconvolve"
arraylib-deconvolve_validation = "arraylib.main:deconvolve_validation"
arraylib-simulate_required_arraysize = "arraylib.main:plot_required_arraysize"
arraylib-simulate_deconvolution = "arraylib.main:plot_expected_deconvolution_accuracy"
[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "nbsphinx"]
notebook = ["jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
